syntax = "proto3";

package metricproxy;

service MetricProxy {
    rpc DescribeMetrics (DescribeMetricsRequest) returns (MetricsDescription) {}
}

message DescribeMetricsRequest {
    string filter = 1;

}

message MetricsDescription {
    bool error = 1;
    string errorInfo = 2;
    PageInfo pageInfo = 3;
    map<string, MetricType> metrics = 4;
}

message MetricType {
    string id = 1;
    string name = 2;
    DataType type = 3;
    repeated string tags = 4;
    map<string, TagValues> tagValues = 5;
}

message TagValues {
    repeated string values = 1;
    map<string, int32> frequencies = 2;
}

enum DataType {
    BOOL = 0;
    COUNT = 1;
    RATE = 2;
    GAUGE = 3;
    HISTOGRAM = 4;
}

message PageInfo {
    int32 count = 1;
    int32 offset = 2;
    SortOrder order = 3;
}

enum SortOrder {
    UNDEF = 0;
    ASC = 1;
    DSC = 2;
}
